--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.8.3",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^8.7.2",
@@ -27,5 +29,8 @@
     "react-hook-form": "^7.39.4",
     "typescript": "4.8.4",
     "zod": "^3.19.1"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0"
   }
 }
