--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.4",
     "typescript": "4.8.4",
-    "zod": "^3.19.1"
+    "zod": "^3.19.1",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0"
