--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^7.8.3",
-    "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^8.7.2",
     "react": "18.2.0",
@@ -32,6 +29,8 @@
     "zustand": "^4.1.4"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^5.0.0"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
