--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@reduxjs/toolkit": "^1.9.0",
     "@tanstack/react-query": "^4.16.1",
     "@tanstack/react-query-devtools": "^4.16.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-redux": "^7.1.24",
     "axios": "^1.1.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
@@ -24,11 +26,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.4",
+    "react-redux": "^8.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "typescript": "4.8.4",
-    "zod": "^3.19.1",
-    "zustand": "^4.1.4"
+    "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/redux-persist": "^4.3.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
